# clidev

./: .gitignore  CMakeLists.txt  file-structure.txt
include/: CLI.hpp
include/cli/: Terminal.hpp  Theme.hpp
include/command/: CommandRegistry.hpp  ICommand.hpp  MergeCommand.hpp
include/core/: Application.hpp
include/parser/: CommandParser.hpp
src/: CLI.cpp  main.cpp
src/cli/: Terminal.cpp  Theme.cpp
src/command/: CommandRegistry.cpp  MergeCommand.cpp
src/core/: Application.cpp
src/parser/: CommandParser.cpp
